syntax = "proto3";

package RPCProto;

option go_package = "github.com/bytelang/kplayer/cmd/proto";

// res
message Resource {
  string path = 1;
  string unique = 2;
}

// add
message AddResourceArgs { Resource res = 1; }
message AddResourceReply { Resource res = 1; }

// remove
message RemoveResourceArgs { string unique = 1; }
message RemoveResourceReply { Resource res = 1; }

// list
message ListResourceArgs {}
message ListResourceReply { repeated Resource resources = 1; }
